Functionalities completed and working. Almost done with CSS

--- a/client/src/components/styles/Pages.css
+++ b/client/src/components/styles/Pages.css
@@ -20,6 +20,6 @@ ul{
     cursor: pointer;
 }
 .numbers:hover{
-    color: white;
-    background-color: black;
+    color: black;
+    background-color: white;
 }
