--- a/client/src/components/styles/Home.css
+++ b/client/src/components/styles/Home.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     justify-content: space-evenly;
     background-color: #D8B6A4;
-    width: 100vw;
+    width: 100%;
     height: 4vh;
 }
 
@@ -73,7 +73,6 @@
     justify-content: center;
     align-items: center;
     background-color: black;
-    
 }
 .searchbar{
     display: flex;
@@ -85,5 +84,9 @@
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
-    background: linear-gradient(black, #3a140f)
+    
+}
+.background{
+    min-height: calc(100vh + 10vh);
+    background: linear-gradient(black, #3a140f);
 }
