--- a/client/src/components/styles/Home.css
+++ b/client/src/components/styles/Home.css
@@ -4,7 +4,7 @@
     justify-content: space-evenly;
     background-color: #D8B6A4;
     width: 100%;
-    height: 4vh;
+    height: 6vh;
 }
 
 .create{
@@ -38,7 +38,9 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    margin-top: 2px;
     width: 600px;
+    font-weight: bold;
 }
 .alpha{
     background-color: #9b9262;
