--- a/client/src/components/styles/RecipeDetail.css
+++ b/client/src/components/styles/RecipeDetail.css
@@ -22,7 +22,6 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    
 }
 .imgDetail{
     display: flex;
@@ -30,9 +29,8 @@
     justify-content: space-around;
     width: 50%;
 }
-.recipeImage{
+.recipeImageDetail{
     border-radius: 25px;
-    
 }
 .recipeInfo{
     width: 50%;
