--- a/client/src/components/styles/SearchBar.css
+++ b/client/src/components/styles/SearchBar.css
@@ -6,6 +6,11 @@
     background-color: rgba(0, 0, 0, 0.616);
     outline: none;
     margin-right: 5px;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+    margin: 4px;
+    
 }
 ::placeholder {
     color: white;
