--- a/client/src/components/styles/CreateRecipe.css
+++ b/client/src/components/styles/CreateRecipe.css
@@ -60,10 +60,18 @@
 }
 .inputo{
     width: 100%;
+    padding-left: 5px;
     border-radius: 12px;
     background-color: rgba(255, 255, 255, 0.431);
     border: none;
     font-size: 20px;
+    color: white;
+}
+.inputo:hover{
+    background-color: rgba(131, 131, 131, 0.466);
+}
+.inputo:focus{
+    background-color: rgba(51, 49, 49, 0.815);
 }
 .buttonContainerBottom{
     margin-top: 30px;
@@ -74,4 +82,5 @@
     font-size: 18px;
     border: none;
     border-radius: 5px;
+    cursor: pointer;
 }
