--- a/client/src/components/styles/LandingPage.css
+++ b/client/src/components/styles/LandingPage.css
@@ -16,24 +16,33 @@
     border-radius: 40px;
 }
 .landing h1{
-    font-size: 45px;
+    font-size: 50px;
     margin-top: 80px;
 }
 .landing p{
     color: #5B5B5B;
-    font-size: 20px;
+    font-size: 22px;
     line-height: 2;
     margin-bottom: 70px;
 }
 .landing button {
-    width: 100px;
-    height: 40px;
-    font-size: 16px;
+    width: 120px;
+    height: 50px;
+    font-size: 18px;
     font-weight: bold;
     background-color: #406343;
     color: white;
     border-radius: 5px;
-    border: none
+    border: none;
+    cursor: pointer;
+    box-shadow: 2px 4px 8px 2px #263b27;
+}
+.landing button:active{
+    width: 118px;
+    height: 48px;
+}
+.landing button:hover{
+    font-size: 20px;
 }
 .img{
     border-radius: 100px;
