--- a/client/src/components/styles/Pages.css
+++ b/client/src/components/styles/Pages.css
@@ -1,7 +1,7 @@
 nav{
     display: flex;
     flex-direction: column;
-    
+    height: 62px;
 }
 
 ul{
@@ -11,15 +11,20 @@ ul{
 }
 
 .numbers{
-    width: 25px;
+    width: 30px;
     padding: 2px;
     border: 1px solid #dbdbdd;
     color: #036ef4;
+    background-color: black;
     font-size: 20px;
     font-weight: bold;
     cursor: pointer;
 }
 .numbers:hover{
+    color: black;
+    background-color: white;
+}
+.numbers:focus{
     color: black;
     background-color: white;
 }
