--- a/client/src/components/styles/SearchBar.css
+++ b/client/src/components/styles/SearchBar.css
@@ -16,6 +16,12 @@
     color: white;
     font-size: 16px;
 }
+.input:hover{
+    background-color: rgba(0, 0, 0, 0.835);
+}
+.input:focus{
+    background-color: rgba(0, 0, 0, 0.835);
+}
 .searchButton {
     width: 70px;
     height: 30px;
@@ -24,4 +30,9 @@
     font-size: 14px;
     border: none;
     border-radius: 5px;
+    cursor: pointer;
+}
+.searchButton:active{
+    width: 68px;
+    height: 28px;
 }
