--- a/client/src/components/styles/LandingPage.css
+++ b/client/src/components/styles/LandingPage.css
@@ -48,7 +48,7 @@
     border-radius: 100px;
     width: 40%;
     height: 90%;
-    background-image: url('https://codes.unidepix.com/img/landingpage.jpg');
+    background-image: url('https://codes.unidepix.com/img/landingpage.png');
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
